--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ company: Meijin, a.s.
 email: gerner@moyo.cz
 name: Jan Gerner
 description: >- # this means to ignore newlines until "baseurl:"
-  Nákup, prodej a správa nemovitostí
+  Nemovitosti a pohledávky
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://meijin.cz" # the base hostname & protocol for your site, e.g. http://example.com
 mapa: "https://en.mapy.cz/s/negepazeka"
@@ -12,7 +12,7 @@ mapa: "https://en.mapy.cz/s/negepazeka"
 # compass configuration
 compass:
   # an avatar or logo (optional)
-#  logo: "/images/compass.png"
+  logo: "/images/Meijin_LOGO_bar-transparent.png"
   # author will appear under the avatar (optional)
   author: "Vojtěch Nekvapil"
   # tagline will appear under the title (optional)
